<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fone_categorii"
    tools:context=".presentation.subcategoryfragment.SubCategoryFragment">

    <!-- TODO: Update blank fragment layout -->

    <FrameLayout
        android:id="@+id/back_fone_tochki"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_radius">

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/kyiv_type_sans_regular"
            android:padding="10dp"
            android:text="@string/choose"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#000FFFFF"
            android:contentDescription="@string/back"
            android:foreground="@drawable/baseline_arrow_back_ios_new_24"
            tools:ignore="TouchTargetSizeCheck" />

    </FrameLayout>


    <ScrollView
        android:id="@+id/scroll_tochki"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <ImageButton
                android:id="@+id/SeaFood"
                android:layout_width="380dp"
                android:layout_height="70dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_radius"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/SeaKitchen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:layout_marginTop="-60dp"
                android:fontFamily="@font/kyiv_type_sans_regular"
                android:textSize="30sp"
                android:text="@string/SeaFood"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/AsiaFood"
                android:layout_width="380dp"
                android:layout_height="70dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_radius"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/AsiaKitchen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:layout_marginTop="-60dp"
                android:fontFamily="@font/kyiv_type_sans_regular"
                android:textSize="30sp"
                android:text="@string/AsiaFood"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/RussiaFood"
                android:layout_width="380dp"
                android:layout_height="70dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_radius"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/RussiaKitchen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:layout_marginTop="-60dp"
                android:fontFamily="@font/kyiv_type_sans_regular"
                android:textSize="30sp"
                android:text="@string/RussiaFood"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/GrusinFood"
                android:layout_width="380dp"
                android:layout_height="70dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_radius"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/GrusinKitchen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:layout_marginTop="-60dp"
                android:fontFamily="@font/kyiv_type_sans_regular"
                android:textSize="30sp"
                android:text="@string/GrusinFood"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/ItalianFood"
                android:layout_width="380dp"
                android:layout_height="70dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_radius"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/ItalianKitchen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:layout_marginTop="-60dp"
                android:fontFamily="@font/kyiv_type_sans_regular"
                android:textSize="30sp"
                android:text="@string/ItalianFood"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/MexicoFood"
                android:layout_width="380dp"
                android:layout_height="70dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_radius"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/MexicoKitchen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:layout_marginTop="-60dp"
                android:fontFamily="@font/kyiv_type_sans_regular"
                android:textSize="30sp"
                android:text="@string/MexicoFood"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/CoffeeFood"
                android:layout_width="380dp"
                android:layout_height="70dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_radius"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/CoffeeKitchen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:layout_marginTop="-60dp"
                android:fontFamily="@font/kyiv_type_sans_regular"
                android:textSize="30sp"
                android:text="@string/CoffeeFood"
                android:textColor="@color/black" />



        </LinearLayout>







    </ScrollView>

</RelativeLayout>